--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ p {
 
 img {
   max-width: 100%;
+  height: auto;
   vertical-align: middle; }
 
 a, a:visited {
@@ -524,6 +525,12 @@ a.cta-button {
     border-width: 2px 0 0;
     border-style: solid;
     border-color: #C8B9A6; }
+  #content .wp-post-image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto; }
+  #content .wp-post-image + .hentry {
+    margin-top: 40px; }
   #content .entry-header {
     margin: 0;
     text-align: center; }
